[gd_scene load_steps=8 format=2]

[ext_resource path="res://Artwork/Office_Desk_Phone.png" type="Texture" id=1]
[ext_resource path="res://Code/Phone/Phone.gd" type="Script" id=2]
[ext_resource path="res://Artwork/exit.png" type="Texture" id=3]
[ext_resource path="res://montserrat/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Code/Phone/RoundButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Artwork/focus_exit.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 38
font_data = ExtResource( 4 )

[node name="Phone" type="Control"]
margin_left = 385.942
margin_top = 275.185
margin_right = 385.942
margin_bottom = 275.185
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.55212, 3.81409 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -17.0
margin_top = -242.0
margin_right = 257.0
margin_bottom = -151.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "555"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhoneExit" type="TextureButton" parent="."]
margin_left = 355.818
margin_top = -328.092
margin_right = 1335.82
margin_bottom = 651.908
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" parent="." instance=ExtResource( 5 )]
margin_left = -19.7601
margin_top = -33.3039
margin_right = 47.2399
margin_bottom = 26.6961

[node name="Button2" parent="." instance=ExtResource( 5 )]
margin_left = 83.5384
margin_top = -33.9189
margin_right = 150.538
margin_bottom = 26.0811

[node name="Button3" parent="." instance=ExtResource( 5 )]
margin_left = 193.069
margin_top = -35.5063
margin_right = 260.069
margin_bottom = 24.4937

[node name="Button4" parent="." instance=ExtResource( 5 )]
margin_left = -21.702
margin_top = 54.5376
margin_right = 45.298
margin_bottom = 114.538

[node name="Button5" parent="." instance=ExtResource( 5 )]
margin_left = 86.1446
margin_top = 53.2177
margin_right = 153.145
margin_bottom = 113.218

[node name="Button6" parent="." instance=ExtResource( 5 )]
margin_left = 191.892
margin_top = 51.7096
margin_right = 258.892
margin_bottom = 111.71

[node name="Button7" parent="." instance=ExtResource( 5 )]
margin_left = -20.0569
margin_top = 142.201
margin_right = 46.9431
margin_bottom = 202.201

[node name="Button8" parent="." instance=ExtResource( 5 )]
margin_left = 84.242
margin_top = 139.026
margin_right = 151.242
margin_bottom = 199.026

[node name="Button9" parent="." instance=ExtResource( 5 )]
margin_left = 191.292
margin_top = 140.855
margin_right = 258.292
margin_bottom = 200.855

[node name="Button10" parent="." instance=ExtResource( 5 )]
margin_left = 84.9066
margin_top = 228.684
margin_right = 151.907
margin_bottom = 288.684

[node name="Button11" parent="." instance=ExtResource( 5 )]
margin_left = -21.6857
margin_top = 228.311
margin_right = 45.3143
margin_bottom = 288.311

[node name="Button12" parent="." instance=ExtResource( 5 )]
margin_left = 189.602
margin_top = 231.055
margin_right = 256.602
margin_bottom = 291.055
[connection signal="pressed" from="PhoneExit" to="." method="_on_Exit_pressed"]
